--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "d:\\django projects\\mytutapp\\mydjangoproj\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\nitin\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
